@@ -16,6 +16,8 @@ NOTIFYBLOCKEDNUMBERLABEL="Max. Blockiert-Nachrichten"
 NOTIFYBLOCKEDNUMBERDESC="Wie oft an einem Tag maximal eine Benachrichtigung über blockierte IP-Adressen gesendet werden soll."
 DELAYDURATIONLABEL="Verzögerung"
 DELAYDURATIONDESC="Verzögerung (in Sekunden) bei einem fehlgeschlagenen Login-Versuch"
+ENABLELOGGINGLABEL="Logging"
+ENABLELOGGINGDESC="Ob eine Logdatei über die Aktivitäten des Plugins angelegt werden soll (dies sollte nur im Fehlerfall notwendig sein; die Logdatei findet sich im logs-Verzeichnis unter dem Namen plg_system_bfstop.log.php)"
 BLOCKNUMBERLABEL="Sperrschwelle"
 BLOCKNUMBERDESC="Wie oft ein Login von derselben IP-Adresse aus (im konfigurierbaren Intervall) versucht werden kann bevor diese IP-Adresse gesperrt wird."
 BLOCKINTERVALLABEL="Sperrintervall"
