@@ -17,6 +17,8 @@ NOTIFYBLOCKEDNUMBERLABEL="Max. # of blocked msgs per day"
 NOTIFYBLOCKEDNUMBERDESC="How often to notify about a blocked IP during one day"
 DELAYDURATIONLABEL="Delay"
 DELAYDURATIONDESC="Delay (in seconds) on a failed login attempt"
+ENABLELOGGINGLABEL="Logging"
+ENABLELOGGINGDESC="Determines whether a Logfile about the activities of the plugin should be created (this should only be necessary in case of a problem; the logfile can be found in the logs directory under the name plg_system_bfstop.log.php)"
 BLOCKNUMBERLABEL="Block threshold"
 BLOCKNUMBERDESC="How often a login can be tried in the given interval (see block interval) until the IP will be blocked"
 BLOCKINTERVALLABEL="Block interval"
